--- a/localusers/Vagrantfile
+++ b/localusers/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure("2") do |config|
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "jasonc/centos7"
   config.vm.hostname = "localusers"
+  config.vm.network "public_network", :bridge => "wlp0s20f3", type: "dhcp"
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
